--- a/package.json
+++ b/package.json
@@ -1,23 +1,34 @@
 {
   "name": "beagoo",
-  "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
+  "version": "0.1.0",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-firebase/app": "^15.2.0",
+    "@react-native-firebase/auth": "^15.2.0",
+    "@react-native-firebase/crashlytics": "^15.2.0",
+    "@react-native-firebase/perf": "^15.2.0",
     "@react-navigation/native-stack": "^6.7.0",
     "@react-navigation/stack": "^6.2.2",
     "expo": "~45.0.0",
+    "expo-facebook": "^12.2.0",
+    "expo-permissions": "~13.2.0",
+    "expo-splash-screen": "~0.15.1",
     "expo-status-bar": "~1.3.0",
+    "expo-updates": "^0.13.3",
+    "firebase": "^9.9.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-gesture-handler": "*",
     "react-native-ionicons": "^4.6.5",
+    "react-native-safe-area-context": "*",
+    "react-native-screens": "*",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "0.17.7"
   },
