--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "np": "np --no-publish",
+    "postversion": "react-native-version"
   },
   "dependencies": {
     "@react-native-firebase/app": "^15.2.0",
@@ -22,6 +24,7 @@
     "expo-status-bar": "~1.3.0",
     "expo-updates": "^0.13.3",
     "firebase": "^9.9.1",
+    "np": "^7.6.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
@@ -31,10 +34,15 @@
     "react-native-safe-area-context": "*",
     "react-native-screens": "*",
     "react-native-vector-icons": "^9.2.0",
+    "react-native-version": "^4.0.0",
     "react-native-web": "0.17.7"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
   },
-  "private": true
+  "private": true,
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/FattiesSoftware/beagoo-mobile-app.git"
+  }
 }
