Updated something... that I don't even know

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "web": "expo start --web",
     "eject": "expo eject",
     "np": "np --no-publish",
-    "postversion": "react-native-version"
+    "postversion": "react-native-version",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
     "@react-native-firebase/app": "^15.2.0",
