--- a/package.json
+++ b/package.json
@@ -28,11 +28,13 @@
     "expo-status-bar": "~1.3.0",
     "expo-updates": "^0.13.3",
     "firebase": "^9.9.1",
+    "moment": "^2.29.4",
     "np": "^7.6.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
     "react-native-animated-splash-screen": "^2.0.5",
+    "react-native-date-picker": "^4.2.5",
     "react-native-gesture-handler": "*",
     "react-native-ionicons": "^4.6.5",
     "react-native-safe-area-context": "*",
