--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "test": "echo \"Error: no test specified\""
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.17.7",
+    "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-native-firebase/app": "^15.2.0",
     "@react-native-firebase/auth": "^15.2.0",
     "@react-native-firebase/crashlytics": "^15.2.0",
@@ -26,25 +26,32 @@
     "expo-permissions": "~13.2.0",
     "expo-splash-screen": "~0.15.1",
     "expo-status-bar": "~1.3.0",
-    "expo-updates": "^0.13.3",
+    "expo-updates": "~0.13.4",
     "firebase": "^9.9.1",
     "moment": "^2.29.4",
     "np": "^7.6.2",
+    "progress-hud": "^1.3.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
     "react-native-animated-splash-screen": "^2.0.5",
+    "react-native-checkbox-reanimated": "^0.1.1",
     "react-native-date-picker": "^4.2.5",
-    "react-native-gesture-handler": "*",
+    "react-native-gesture-handler": "~2.2.1",
+    "react-native-image-crop-tools": "^1.6.2",
+    "react-native-image-picker": "^4.8.4",
     "react-native-ionicons": "^4.6.5",
-    "react-native-safe-area-context": "*",
-    "react-native-screens": "*",
+    "react-native-reanimated": "^2.9.1",
+    "react-native-safe-area-context": "4.2.4",
+    "react-native-screens": "~3.11.1",
+    "react-native-svg": "^12.4.3",
     "react-native-vector-icons": "^9.2.0",
     "react-native-version": "^4.0.0",
     "react-native-web": "0.17.7",
     "react-redux": "^8.0.2",
     "redux": "^4.2.0",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "tailwindcss-react-native": "^1.7.10"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
