--- a/ios/Podfile
+++ b/ios/Podfile
@@ -43,6 +43,11 @@ target 'Beagoo' do
     rescue => e
       Pod::UI.warn e
     end
+    begin
+      expo_patch_react_imports!(installer)
+    rescue => e
+      Pod::UI.warn e
+    end
   end
 
   post_install do |installer|
