--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "expo-permissions": "~13.2.0",
     "expo-splash-screen": "~0.16.1",
     "expo-status-bar": "~1.4.0",
+    "expo-system-ui": "^1.3.0",
     "expo-updates": "~0.14.3",
     "firebase": "^9.9.1",
     "moment": "^2.29.4",
