--- a/package.json
+++ b/package.json
@@ -10,18 +10,24 @@
     "eject": "expo eject",
     "np": "np --no-publish",
     "postversion": "react-native-version",
-    "test": "echo \"Error: no test specified\""
+    "test": "echo \"Error: no test specified\"",
+    "newios": "cd ios && pod install && cd .. && expo run:ios"
   },
   "dependencies": {
+    "@expo/webpack-config": "^0.16.19",
     "@react-native-async-storage/async-storage": "~1.17.3",
+    "@react-native-community/image-editor": "^2.3.0",
     "@react-native-firebase/app": "^15.2.0",
     "@react-native-firebase/auth": "^15.2.0",
     "@react-native-firebase/crashlytics": "^15.2.0",
     "@react-native-firebase/perf": "^15.2.0",
+    "@react-navigation/bottom-tabs": "^6.3.2",
+    "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
     "@react-navigation/stack": "^6.2.2",
     "@reduxjs/toolkit": "^1.8.3",
-    "expo": "^46.0.0",
+    "expo": "~46.0.2",
+    "expo-blur": "^11.2.0",
     "expo-facebook": "^12.2.0",
     "expo-permissions": "~13.2.0",
     "expo-splash-screen": "~0.16.1",
@@ -30,7 +36,7 @@
     "expo-updates": "~0.14.3",
     "firebase": "^9.9.1",
     "moment": "^2.29.4",
-    "np": "^7.6.2",
+    "np": "^3.0.4",
     "progress-hud": "^1.3.2",
     "react": "18.0.0",
     "react-dom": "18.0.0",
@@ -49,9 +55,11 @@
     "react-native-vector-icons": "^9.2.0",
     "react-native-version": "^4.0.0",
     "react-native-web": "~0.18.7",
+    "react-navigation": "^4.4.4",
     "react-redux": "^8.0.2",
     "redux": "^4.2.0",
     "redux-persist": "^6.0.0",
+    "tailwindcss": "^3.1.8",
     "tailwindcss-react-native": "^1.7.10"
   },
   "devDependencies": {
