--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,5 +26,5 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - run: npm ci --force
-    - run: npm run build --if-present --force
+    - run: npm ci --force --legacy-peer-deps
+    - run: npm run build --if-present --force --legacy-peer-deps
