--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "newios": "cd ios && pod install && cd .. && expo run:ios"
   },
   "dependencies": {
+    "@chakrahq/react-native-side-menu": "^1.3.4",
+    "@expo/vector-icons": "^13.0.0",
     "@expo/webpack-config": "^0.16.19",
     "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-native-community/image-editor": "^2.3.0",
