--- a/eas.json
+++ b/eas.json
@@ -1,6 +1,6 @@
 {
   "cli": {
-    "version": ">= 0.52.0"
+    "version": ">= 3.0.0"
   },
   "build": {
     "development": {
@@ -10,19 +10,12 @@
       },
       "ios": {
         "buildConfiguration": "Debug"
-      },
-      "configuration_only": {
-        "node": "16.16.0"
       }
     },
     "preview": {
       "distribution": "internal"
     },
-    "production": {
-      "android": {
-        "buildType": "apk"
-      }
-    }
+    "production": {}
   },
   "submit": {
     "production": {}
