--- a/package.json
+++ b/package.json
@@ -28,11 +28,12 @@
     "@react-navigation/native-stack": "^6.7.0",
     "@react-navigation/stack": "^6.2.2",
     "@reduxjs/toolkit": "^1.8.3",
-    "expo": "~46.0.2",
-    "expo-blur": "^11.2.0",
+    "expo": "~47.0.8",
+    "expo-blur": "^12.0.1",
     "expo-facebook": "^12.2.0",
+    "expo-modules-core": "^1.0.3",
     "expo-permissions": "~13.2.0",
-    "expo-splash-screen": "~0.16.1",
+    "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.0",
     "expo-system-ui": "^1.3.0",
     "expo-updates": "~0.14.3",
@@ -40,9 +41,9 @@
     "moment": "^2.29.4",
     "np": "^3.0.4",
     "progress-hud": "^1.3.2",
-    "react": "18.0.0",
+    "react": "18.1.0",
     "react-dom": "18.0.0",
-    "react-native": "0.69.3",
+    "react-native": "0.70.5",
     "react-native-animated-splash-screen": "^2.0.5",
     "react-native-checkbox-reanimated": "^0.1.1",
     "react-native-date-picker": "^4.2.5",
